--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title> Youtube Flexbox</title>
         <meta name="description" content="CloneYoutube" author="Douglas Godois dos Santos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="website icon" type="favicon/x-image" href="./assets/imagens/faviconYoutube.png.png">
